# Unstable-Unicorns-Fan-Project

./: CMakeLists.txt  LICENSE  README.md  main.cpp
assets/cards/: alluring-narwhal.json  americorn.json  angel-unicorn.json  annoying-flying-unicorn.json  baby-unicorn.json  back-kick.json  barbed-wire.json  basic-unicorn.json  blatant-thievery.json  blinding-light.json  broken-stable.json  chance-of-luck.json  classy-narwhal.json  glitter-bomb.json  good-deal.json  greedy-flying-unicorn.json  magical-flying-unicorn.json  magical-kittencorn.json  majestic-flying-unicorn.json  mermaid-unicorn.json  mystical-vortex.json  narwhal-torpedo.json  neigh.json  rainbow-aura.json  sadistic-ritual.json  seductive-unicorn.json  shabby-the-narwhal.json  shark-with-a-horn.json  slowdown.json  stabby-the-unicorn.json  summoning-ritual.json  super-neigh.json  swift-flying-unicorn.json  targeted-destruction.json  tiny-stable.json  two-for-one.json  unfair-bargain.json  unicorn-on-the-cob.json  unicorn-phoenix.json  unicorn-poison.json  (+2 more)
card/: Card.hpp  CardData.hpp  CardUtils.cpp  CardUtils.hpp
card/cardLoader/: CardLoader.cpp  CardLoader.hpp
choiceHandler/: ChoiceManager.cpp  ChoiceManager.hpp  ChoiceRequest.hpp  ChoiceResult.hpp  ChoiceType.hpp  ChoiceUtils.cpp  ChoiceUtils.hpp
consoleUI/: ConsoleUI.cpp  ConsoleUI.hpp
effects/: ActiveEffects.cpp  ActiveEffects.hpp  BOTResolutionContext.hpp  EffectContext.hpp  EffectRegistry.cpp  EffectRegistry.hpp  EffectSystem.cpp  EffectSystem.hpp  NeighChainContext.hpp
effects/cardEffects/: DowngradeCardEffects.cpp  DowngradeCardEffects.hpp  MagicEffects.cpp  MagicEffects.hpp  MagicalUnicornEffects.cpp  MagicalUnicornEffects.hpp  UpgradeCardEffects.cpp  UpgradeCardEffects.hpp
eventDispatcher/: EventDispatcher.cpp  EventDispatcher.hpp  ListenerHandle.cpp  ListenerHandle.hpp
events/: CardDestroyedEvent.hpp  CardDiscardedEvent.hpp  CardEnteredStableEvent.hpp  CardLeftStableEvent.hpp  CardPlayedEvent.hpp  CardSacrificedEvent.hpp  ChoiceAddedEvent.hpp  PhaseChangedEvent.hpp
game/: Game.cpp  Game.hpp  GamePhase.hpp
legalActions/: LegalActions.hpp
neighUtils/: NeighUtils.cpp  NeighUtils.hpp
restrictions/: PlayerRestrictionType.hpp  PlayerRestrictions.hpp  UnicornRestrictions.hpp
stable/: EntityStable.cpp  EntityStable.hpp  SharedBoard.cpp  SharedBoard.hpp  Stable.cpp  Stable.hpp  StableUtils.cpp  StableUtils.hpp
