cmake_minimum_required(VERSION 3.31)
project(Unstable_Unicorns)

set(CMAKE_CXX_STANDARD 20)
include_directories(${CMAKE_SOURCE_DIR})
add_executable(Unstable_Unicorns main.cpp
        card/CardData.hpp
        card/Card.hpp
        restrictions/UnicornRestrictions.hpp
        restrictions/PlayerRestrictions.hpp
        restrictions/PlayerRestrictionType.hpp
        card/cardLoader/CardLoader.hpp
        card/cardLoader/CardLoader.cpp
        effects/EffectRegistry.hpp
        eventDispatcher/ListenerHandle.hpp
        eventDispatcher/EventDispatcher.hpp
        eventDispatcher/EventDispatcher.cpp
        stable/EntityStable.hpp
        stable/SharedBoard.hpp
        stable/EntityStable.cpp
        stable/SharedBoard.cpp
        stable/Stable.hpp
        effects/EffectContext.hpp
        stable/StableUtils.hpp
        stable/StableUtils.cpp
        events/CardDestroyedEvent.hpp
        events/CardSacrificedEvent.hpp
        effects/EffectRegistry.cpp
        effects/EffectSystem.hpp
        effects/EffectSystem.cpp
        effects/ActiveEffects.hpp
        effects/ActiveEffects.cpp
        eventDispatcher/ListenerHandle.cpp
        events/CardEnteredStableEvent.hpp
        events/CardDiscardedEvent.hpp
        events/CardLeftStableEvent.hpp
        card/CardUtils.hpp
        card/CardUtils.cpp
        stable/Stable.cpp
        game/GamePhase.hpp
        game/Game.hpp
        game/Game.cpp
        events/PhaseChangedEvent.hpp
        choiceHandler/ChoiceRequest.hpp
        choiceHandler/ChoiceType.hpp
        choiceHandler/ChoiceResult.hpp
        choiceHandler/ChoiceManager.hpp
        choiceHandler/ChoiceManager.cpp
        consoleUI/ConsoleUI.hpp
        consoleUI/ConsoleUI.cpp
        events/CardPlayedEvent.hpp
        choiceHandler/ChoiceUtils.hpp
        choiceHandler/ChoiceUtils.cpp
        legalActions/LegalActions.hpp
        effects/BOTResolutionContext.hpp
        events/ChoiceAddedEvent.hpp
        effects/NeighChainContext.hpp
        neighUtils/NeighUtils.hpp
        neighUtils/NeighUtils.cpp
        effects/cardEffects/MagicalUnicornEffects.cpp
        effects/cardEffects/MagicalUnicornEffects.hpp
        effects/cardEffects/MagicEffects.hpp
        effects/cardEffects/MagicEffects.cpp
        effects/cardEffects/UpgradeCardEffects.hpp
        effects/cardEffects/UpgradeCardEffects.cpp
        effects/cardEffects/DowngradeCardEffects.hpp
        effects/cardEffects/DowngradeCardEffects.cpp)
